# Class_Hierarchy_Cmake

./: CMakeLists.txt  Class_Hierarchy.cpp
Libs/: CMakeLists.txt  Equilateral_triangle.cpp  Equilateral_triangle.h  Figures.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Macros.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Quadrate.cpp  Quadrate.h  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  Right_triangle.cpp  Right_triangle.h  Triangle.cpp  Triangle.h
